[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/TowerBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="TowerBase" type="StaticBody2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -57.0
margin_right = 32.0
margin_bottom = -43.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AreaRadius" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )
